# auth-service

./: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b460ce963131_create_usermodel_refreshtokenmodel.py
src/: config.py  constants.py  exceptions.py  main.py
src/api/: dependencies.py
src/api/internal/: router.py  users.py
src/api/v1/: auth.py  router.py  users.py
src/db/: database.py  models.py
src/repositories/: refresh_token.py  user.py
src/schemas/: client.py  oauth.py  user.py
src/security/: jwt_service.py  oauth.py
src/services/: auth.py  user.py
